# scala-40-telegram-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  scala40-bot-specs.md
.github/workflows/: deploy.yml
cli/: __main__.py  inspect_state.py  play.py  simulate.py
infra/: template.yaml
src/: handler.py
src/bot/: callbacks.py  commands.py  deps.py  messages.py  notifications.py  router.py
src/db/: dynamodb.py  memory.py  repository.py
src/game/: deck.py  engine.py  integrity.py  models.py  scoring.py  validator.py
src/lobby/: manager.py
src/utils/: constants.py  crypto.py  telegram.py
tests/: conftest.py
tests/integration/: test_bot_flow.py  test_game_flow.py
tests/unit/: test_callbacks.py  test_commands.py  test_deck.py  test_engine.py  test_integrity.py  test_lobby.py  test_messages.py  test_models.py  test_notifications.py  test_scoring.py  test_telegram.py  test_ui.py  test_validator.py
